--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -18,16 +18,19 @@
         <com.naver.maps.map.MapView
             android:id="@+id/map_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="0dp" />
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:id="@+id/layout_playground_detail"
             playgroundDetailVisibility="@{vm.myPlayground}"
+            uiState="@{vm.uiState}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:visibility="visible">
+            tools:visibility="gone">
 
             <LinearLayout
                 android:id="@+id/bottom_sheet_playground"
@@ -44,7 +47,7 @@
                     android:layout_height="wrap_content" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rcv_playground"
+                    android:id="@+id/rcv_playground_pet"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -125,8 +128,9 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_woof_location"
+            android:id="@+id/layout_playground_location"
             locationBtnMargin="@{vm.myPlayground}"
+            playgroundLocationBtnVisibility="@{vm.uiState}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -143,8 +147,9 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <FrameLayout
-            android:id="@+id/btn_woof_location"
+            android:id="@+id/btn_playground_location"
             locationBtnMargin="@{vm.myPlayground}"
+            playgroundLocationBtnVisibility="@{vm.uiState}"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginStart="10dp"
@@ -154,9 +159,9 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/btn_woof_my_playground"
+            android:id="@+id/btn_playground_my"
             style="@style/Theme.AppCompat.TextView.SemiBold.White.Size14"
-            uiState="@{vm.uiState}"
+            myPlaygroundBtnVisibility="@{vm.uiState}"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginStart="12dp"
@@ -166,7 +171,7 @@
             android:onClick="@{() -> vm.clickMyPlaygroundBtn()}"
             android:text="@string/woof_my_footprint"
             android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@id/btn_woof_location"
+            app:layout_constraintBottom_toTopOf="@id/btn_playground_location"
             app:layout_constraintStart_toStartOf="parent"
             tools:visibility="gone" />
 
@@ -253,7 +258,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_woof_register_marker"
-            registeringVisibilityAnimation="@{vm.uiState}"
+            registeringPlaygroundAnimation="@{vm.uiState}"
             android:layout_width="match_parent"
             android:layout_height="208dp"
             android:layout_margin="12dp"
@@ -304,6 +309,127 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_playground_summary"
+            viewingPlaygroundSummaryAnimation="@{vm.uiState}"
+            android:layout_width="match_parent"
+            android:layout_height="340dp"
+            android:layout_marginHorizontal="36dp"
+            android:layout_marginBottom="24dp"
+            android:background="@drawable/rect_white_fill_30"
+            android:elevation="10dp"
+            android:paddingHorizontal="6dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:visibility="visible">
+
+            <ImageView
+                android:id="@+id/iv_playground_summary"
+                android:layout_width="160dp"
+                android:layout_height="160dp"
+                android:layout_margin="14dp"
+                android:src="@drawable/ic_playground_summary"
+                app:layout_constraintBottom_toTopOf="@id/rcv_playground_pet_summary"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <View
+                android:id="@+id/layout_playground_summary_pet_count"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_marginBottom="14dp"
+                android:background="@drawable/circle_coral50"
+                android:paddingTop="20dp"
+                app:layout_constraintBottom_toTopOf="@id/rcv_playground_pet_summary"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/iv_playground_summary" />
+
+            <TextView
+                android:id="@+id/tv_playground_arrived_pet_count"
+                style="@style/Theme.AppCompat.TextView.SemiBold.Coral400.Size28"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{String.valueOf(vm.playgroundSummary.arrivedPetCount)}"
+                app:layout_constraintBottom_toBottomOf="@id/tv_playground_divider_pet_count"
+                app:layout_constraintEnd_toStartOf="@id/tv_playground_divider_pet_count"
+                app:layout_constraintTop_toTopOf="@id/tv_playground_divider_pet_count"
+                tools:text="12" />
+
+            <TextView
+                android:id="@+id/tv_playground_divider_pet_count"
+                style="@style/Theme.AppCompat.TextView.SemiBold.Gray500.Size28"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:paddingHorizontal="4dp"
+                android:text="/"
+                app:layout_constraintEnd_toEndOf="@id/layout_playground_summary_pet_count"
+                app:layout_constraintStart_toStartOf="@id/layout_playground_summary_pet_count"
+                app:layout_constraintTop_toBottomOf="@id/tv_playground_participation_status" />
+
+            <TextView
+                android:id="@+id/tv_playground_total_pet_count"
+                style="@style/Theme.AppCompat.TextView.SemiBold.Gray500.Size24"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{String.valueOf(vm.playgroundSummary.totalPetCount)}"
+                app:layout_constraintBottom_toBottomOf="@id/tv_playground_divider_pet_count"
+                app:layout_constraintStart_toEndOf="@id/tv_playground_divider_pet_count"
+                app:layout_constraintTop_toTopOf="@id/tv_playground_divider_pet_count"
+                tools:text="15" />
+
+            <TextView
+                android:id="@+id/tv_playground_participation_status"
+                style="@style/Theme.AppCompat.TextView.SemiBold.Coral300.Size16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="@string/playground_participation_status"
+                app:layout_constraintEnd_toEndOf="@id/layout_playground_summary_pet_count"
+                app:layout_constraintStart_toStartOf="@id/layout_playground_summary_pet_count"
+                app:layout_constraintTop_toTopOf="@id/layout_playground_summary_pet_count" />
+
+            <TextView
+                android:id="@+id/tv_playground_play_together"
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="70dp"
+                android:text="@string/playground_play_together"
+                app:layout_constraintBottom_toTopOf="@id/layout_playground_summary_pet_count"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/iv_playground_summary" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcv_playground_pet_summary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="14dp"
+                android:layout_marginBottom="14dp"
+                android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintBottom_toTopOf="@id/btn_playground_look_around"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:itemCount="5"
+                tools:listitem="@layout/item_playground_pet_summary" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_playground_look_around"
+                style="@style/Theme.AppCompat.TextView.SemiBold.White.Size20"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_marginHorizontal="14dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/rect_coral400_fill_16"
+                android:onClick="@{() -> vm.clickLookAroundPlaygroundBtn()}"
+                android:text="@string/playground_look_around"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <FrameLayout
