--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -86,7 +86,6 @@
         <item name="android:textColor">@color/gray700</item>
     </style>
 
-
     <style name="Theme.AppCompat.TextView.SemiBold.Gray08.Size24" parent="@style/Widget.AppCompat.TextView">
         <item name="android:textSize">24dp</item>
         <item name="android:includeFontPadding">false</item>
@@ -165,7 +164,7 @@
     </style>
 
     <style name="Theme.AppCompat.TextView.SemiBold.Gray05.Size16" parent="@style/Widget.AppCompat.TextView">
-        <item name="android:textColor">@color/gray400</item>
+        <item name="android:textColor">@color/gray500</item>
         <item name="android:textSize">16dp</item>
         <item name="android:includeFontPadding">false</item>
         <item name="fontFamily">@font/pretendard_semi_bold</item>
@@ -464,6 +463,13 @@
         <item name="fontFamily">@font/pretendard_semi_bold</item>
     </style>
 
+    <style name="Theme.AppCompat.TextView.SemiBold.Coral300.Size24" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/coral300</item>
+        <item name="android:textSize">24dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/pretendard_semi_bold</item>
+    </style>
+
     <style name="Theme.AppCompat.TextView.SemiBold.Coral400.Size14" parent="@style/Widget.AppCompat.TextView">
         <item name="android:textColor">@color/coral400</item>
         <item name="android:textSize">14dp</item>
@@ -498,6 +504,28 @@
         <item name="android:includeFontPadding">false</item>
         <item name="fontFamily">@font/pretendard_semi_bold</item>
     </style>
+
+    <style name="Theme.AppCompat.TextView.SemiBold.Coral400.Size28" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/coral400</item>
+        <item name="android:textSize">28dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/pretendard_semi_bold</item>
+    </style>
+
+    <style name="Theme.AppCompat.TextView.SemiBold.Gray500.Size28" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/gray500</item>
+        <item name="android:textSize">28dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/pretendard_semi_bold</item>
+    </style>
+
+    <style name="Theme.AppCompat.TextView.SemiBold.Gray500.Size24" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/gray500</item>
+        <item name="android:textSize">24dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/pretendard_semi_bold</item>
+    </style>
+
 
     <!--Profile Edit Text-->
     <style name="Theme.AppCompat.TextView.Profile.EditText.Contents" parent="@style/Widget.AppCompat.EditText">
