refactor: BottomSheet 자연스럽게 보이게 수정

--- a/android/app/src/main/res/layout/item_playground_pet_detail.xml
+++ b/android/app/src/main/res/layout/item_playground_pet_detail.xml
@@ -26,7 +26,8 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:onClick="@{() -> actionHandler.clickPetImage(petDetail.imageUrl)}"
-            app:layout_constraintDimensionRatio="1:1"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:shapeAppearanceOverlay="@style/RoundBig"
