--- a/android/app/src/main/res/layout/item_club.xml
+++ b/android/app/src/main/res/layout/item_club.xml
@@ -110,6 +110,7 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rcv_club_list_dog_list"
+                    android:nestedScrollingEnabled="false"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
