refactor: 상대 유저 프로필 페이지 햄버거 바 수정

--- a/android/app/src/main/res/layout/activity_other_profile.xml
+++ b/android/app/src/main/res/layout/activity_other_profile.xml
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:padding="16dp"
-                android:src="@drawable/ic_side_menu" />
+                android:src="@drawable/ic_more_vertical" />
 
         </com.google.android.material.appbar.MaterialToolbar>
 
