--- a/android/app/src/main/res/layout/bottom_sheet_filter_size_selector.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_filter_size_selector.xml
@@ -12,6 +12,7 @@
     </data>
 
     <LinearLayout
+        style="@style/RoundTopCornerBottomSheetDialogTheme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
