--- a/android/app/src/main/res/layout/bottom_sheet_gender_filter_selector.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_gender_filter_selector.xml
@@ -13,6 +13,7 @@
 
 
     <LinearLayout
+        style="@style/RoundTopCornerBottomSheetDialogTheme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
