fix: 서비스 기능 실행 안되던 오류 수정

--- a/android/app/src/main/res/layout/fragment_playground.xml
+++ b/android/app/src/main/res/layout/fragment_playground.xml
@@ -296,7 +296,7 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_woof_register_footprint"
                 style="@style/Theme.AppCompat.TextView.SemiBold.White.Size20"
-                cameraIdle="@{vm.registerPlaygroundBtn.cameraIdle}"
+                cameraIdle="@{vm.playgroundRegisterBtn.cameraIdle}"
                 uiState="@{vm.uiState}"
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
