--- a/android/app/src/main/res/layout/item_playground_pet_detail.xml
+++ b/android/app/src/main/res/layout/item_playground_pet_detail.xml
@@ -99,8 +99,9 @@
             tools:text="암컷" />
 
         <TextView
-            android:id="@+id/tv_playground_pet_description"
+            android:id="@+id/tv_playground_pet_message"
             style="@style/Theme.AppCompat.TextView.Regular.Gray09.Size12"
+            messageVisibility="@{petDetail.message}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
