[AN] 필터 & 모임 등록 UI 피드백 개선 (#645)

--- a/android/app/src/main/res/layout/bottom_sheet_filter_size_selector.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_filter_size_selector.xml
@@ -12,6 +12,7 @@
     </data>
 
     <LinearLayout
+        style="@style/RoundTopCornerBottomSheetDialogTheme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -38,9 +39,12 @@
                 android:layout_height="wrap_content" />
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_alart" />
+                android:id="@+id/btn_size_guide"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                onSingleClick="@{() -> vm.selectSizeGuide()}"
+                android:src="@drawable/ic_help_coral500"
+                app:tint="@color/gray800" />
         </LinearLayout>
 
         <Space
