--- a/android/app/src/main/res/layout/bottom_sheet_participation_filter_selector.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_participation_filter_selector.xml
@@ -14,6 +14,7 @@
 
 
     <LinearLayout
+        style="@style/RoundTopCornerBottomSheetDialogTheme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -22,12 +23,30 @@
         <com.google.android.material.bottomsheet.BottomSheetDragHandleView
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
-        <TextView
-            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/club_list_participation_filter" />
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/club_list_participation_filter" />
+
+            <Space
+                android:layout_width="5dp"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:id="@+id/btn_size_guide"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                onSingleClick="@{() -> vm.selectSizeGuide()}"
+                android:src="@drawable/ic_help_coral500"
+                app:tint="@color/gray800" />
+        </LinearLayout>
 
         <Space
             android:layout_width="wrap_content"
