--- a/android/app/src/main/res/layout/activity_register_pet.xml
+++ b/android/app/src/main/res/layout/activity_register_pet.xml
@@ -116,7 +116,8 @@
                 android:inputType="text"
                 android:maxLength="8"
                 android:maxLines="1"
-                android:text="@={vm.petName}"
+                android:onTextChanged="@{(s, start, before, count) -> vm.updatePetName(s)}"
+                android:text="@{vm.petName}"
                 app:layout_constraintStart_toStartOf="@+id/tv_dog_name_title"
                 app:layout_constraintTop_toBottomOf="@+id/tv_dog_name_title" />
 
@@ -158,7 +159,8 @@
                 android:inputType="text"
                 android:maxLength="20"
                 android:maxLines="1"
-                android:text="@={vm.petDescription}"
+                android:onTextChanged="@{(s, start, before, count) -> vm.updatePetDescription(s)}"
+                android:text="@{vm.petDescription}"
                 app:layout_constraintStart_toStartOf="@+id/tv_description"
                 app:layout_constraintTop_toBottomOf="@+id/tv_description" />
 
