--- a/android/app/src/main/res/layout/activity_message.xml
+++ b/android/app/src/main/res/layout/activity_message.xml
@@ -23,7 +23,8 @@
             android:layout_marginStart="16dp"
             android:clickable="true"
             android:onClick="@{() -> vm.clickCancelBtn()}"
-            android:text="취소"
+            android:padding="6dp"
+            android:text="@string/message_cancel"
             app:layout_constraintBottom_toBottomOf="@id/tv_message_title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/tv_message_title" />
@@ -34,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="상태메시지"
+            android:text="@string/message_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -46,9 +47,9 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:clickable="true"
-            android:onClick="@{() -> vm.clickCancelBtn()}"
-
-            android:text="확인"
+            android:onClick="@{() -> vm.clickConfirmBtn()}"
+            android:padding="6dp"
+            android:text="@string/message_confirm"
             app:layout_constraintBottom_toBottomOf="@id/tv_message_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/tv_message_title" />
@@ -66,7 +67,10 @@
             android:maxLength="20"
             android:maxLines="1"
             android:paddingBottom="18dp"
+            android:singleLine="true"
+            android:inputType="text"
             android:text="@{vm.message}"
+            android:imeOptions="actionDone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -80,9 +84,9 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/circle_gray500"
+            android:onClick="@{() -> vm.clearMessageBtn()}"
             android:padding="2dp"
             android:src="@drawable/ic_close_white"
-            android:onClick="@{() -> vm.clearMessageBtn()}"
             app:layout_constraintBottom_toBottomOf="@id/et_message"
             app:layout_constraintEnd_toEndOf="@id/et_message"
             app:layout_constraintTop_toTopOf="@id/et_message" />
