--- a/android/app/src/main/res/layout/activity_my_club.xml
+++ b/android/app/src/main/res/layout/activity_my_club.xml
@@ -80,8 +80,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/ripple_circle_white"
+            android:layout_margin="20dp"
             android:clickable="true"
             android:focusable="true"
+            android:elevation="10dp"
             android:src="@drawable/ic_club_add_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
