--- a/android/app/src/main/res/layout/include_skeleton_my_club.xml
+++ b/android/app/src/main/res/layout/include_skeleton_my_club.xml
@@ -2,6 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
+        android:id="@+id/linear_layout_club_loading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
